--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    // compile project (':retrofit')
     compile 'com.squareup.retrofit:retrofit:1.6.1'
 }
