--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:palette-v7:+'
     compile 'com.squareup.picasso:picasso:2.3.+'
     compile project (':libraries:enhanced-edittext')
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
 }
