--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk tools:node="replace" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,17 +14,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".GistsApplication">
-        <activity
-            android:name=".ui.activity.LoginActivity">
+        <activity android:name=".ui.activity.LoginActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
-        <activity
-            android:name=".ui.activity.MainActivity" />
+        </activity>
+        <activity android:name=".ui.activity.MainActivity" />
     </application>
 
 </manifest>
