--- a/libraries/enhanced-edittext/build.gradle
+++ b/libraries/enhanced-edittext/build.gradle
@@ -1,9 +1,18 @@
 apply plugin: 'com.android.library'
 
 
+
 android {
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion '20.0.0'
+
+    defaultConfig {
+        applicationId "fr.dvilleneuve.android"
+        minSdkVersion 15
+        targetSdkVersion 21
+        versionCode 1
+        versionName "1.0"
+    }
 }
 
 dependencies {
