--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion MAX_VERSION
+    compileSdkVersion 21
     buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.alorma.github"
         minSdkVersion 15
-        targetSdkVersion MAX_VERSION
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
     signingConfigs {
         playStore {
-            storeFile file("keystore/app.keystore.jks")
+            storeFile file("../keystore/app.keystore.jks")
             storePassword "android"
             keyAlias "alorma"
             keyPassword "DKALFARN8ERCX"
@@ -21,6 +21,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+        }
         release {
             signingConfig signingConfigs.playStore
         }
