--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion MAX_VERSION
+    compileSdkVersion 21
     buildToolsVersion "20.0.0"
 
     defaultConfig {
         applicationId "com.alorma.github.sdk"
         minSdkVersion 15
-        targetSdkVersion MAX_VERSION
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
