--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "com.alorma.github"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
@@ -17,6 +16,17 @@ android {
             storePassword "android"
             keyAlias "alorma"
             keyPassword "DKALFARN8ERCX"
+        }
+    }
+
+    productFlavors {
+        free {
+            buildConfigField "boolean", "PRO_VERSION", "false"
+            applicationId "com.alorma.github"
+        }
+        pro {
+            buildConfigField "boolean", "PRO_VERSION", "true"
+            applicationId "com.alorma.github.pro"
         }
     }
 
