--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.android.support:palette-v7:+'
     compile project(':libraries:enhanced-edittext')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
 }
