--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,25 +7,29 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
     signingConfigs {
         playStore {
-            storeFile file("../keystore/app.keystore.jks")
-            storePassword "android"
-            keyAlias "alorma"
-            keyPassword "DKALFARN8ERCX"
+            storeFile file(SIGN_FILE)
+            storePassword SIGN_KEYSTORE_PASS
+            keyAlias SIGN_KEYSTORE_ALIAS
+            keyPassword SIGN_KEYSTORE_ALIAS_PASS
         }
     }
 
     productFlavors {
+        def BOOLEAN = "boolean"
+        def TRUE = "true"
+        def FALSE = "false"
+        def PRO_VERSION = "PRO_VERSION"
         free {
-            buildConfigField "boolean", "PRO_VERSION", "false"
+            buildConfigField BOOLEAN, PRO_VERSION, FALSE
             applicationId "com.alorma.github"
         }
         pro {
-            buildConfigField "boolean", "PRO_VERSION", "true"
+            buildConfigField BOOLEAN, PRO_VERSION, TRUE
             applicationId "com.alorma.github.pro"
         }
     }
