--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v13:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile project(':sdk')
     compile 'com.android.support:palette-v7:+'
