--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile project(':libraries:enhanced-edittext')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
+    compile 'com.squareup:otto:1.3.5'
 }
