--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.android.gms:play-services:5.0.77'
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:support-v13:+'
     compile 'com.android.support:recyclerview-v7:+'
