--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.android.support:support-v13:20.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0-rc1'
+    compile 'com.android.support:cardview-v7:21.0.0-rc1'
     compile 'com.android.support:palette-v7:21.0.0-rc1'
     compile project(':sdk')
     compile project(':libraries:enhanced-edittext')
