--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.alorma.github">
+    package="com.alorma.github"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk tools:node="replace" />
 
@@ -11,20 +11,19 @@
     <uses-permission android:name="com.android.vending.BILLING" />
 
     <application
+        android:name=".GistsApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".GistsApplication">
-        <activity android:name=".ui.activity.LoginActivity">
-
+        android:theme="@style/AppTheme" >
+        <activity android:name=".ui.activity.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".ui.activity.MainActivity" >
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable_repos" />
@@ -32,16 +31,15 @@
         <activity android:name=".ui.activity.ProfileActivity" />
         <activity android:name=".ui.activity.RepoDetailActivity" />
         <activity android:name=".ui.activity.FileActivity" />
-        <activity android:name=".ui.activity.SearchReposActivity">
+        <activity android:name=".ui.activity.SearchReposActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
         <activity
             android:name=".Interceptor"
-            android:theme="@android:style/Theme.NoDisplay">
+            android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter>
-
                 <action android:name="android.intent.action.VIEW" />
 
                 <data
@@ -50,20 +48,23 @@
                 <data
                     android:host="github.com"
                     android:scheme="https" />
-
                 <data android:pathPattern=".*" />
 
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
             </intent-filter>
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".ui.activity.NewIssueActivity"
+            android:label="@string/title_activity_new_issue" >
+        </activity>
     </application>
 
 </manifest>
