--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 120
-        versionName "1.2.0"
+        versionCode 123
+        versionName "1.2.3"
     }
     signingConfigs {
         playStore {
@@ -42,4 +42,11 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
     // compile 'com.squareup:otto:1.3.5'
+    compile 'uk.me.lewisdeane.ldialogs:ldialogs@aar'
+}
+
+repositories{
+    flatDir{
+        dirs 'libs'
+    }
 }
