New fab button provided by libary

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':sdk', ':libraries:enhanced-edittext'
+include ':app', ':sdk', ':libraries:enhanced-edittext', 'libraries:fab_button'
