--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:5.2.08'
-    compile 'com.android.support:support-annotations:20.0.0'
+    compile 'com.google.android.gms:play-services:5.0.+'
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.android.support:support-v13:20.0.0'
     compile 'com.android.support:palette-v7:21.0.0-rc1'
