--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile project(':sdk')
     compile project(':libraries:enhanced-edittext')
     compile project(':libraries:fab_button')
+    compile project(':libraries:githubicons')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
     // compile 'com.squareup:otto:1.3.5'
