--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoBar">
         <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,7 +32,7 @@
         <activity android:name=".ui.activity.ProfileActivity"/>
         <activity android:name=".ui.activity.RepoDetailActivity"/>
         <activity
-            android:name=".ui.dialog.NewCommentDialog"
+            android:name=".ui.dialog.NewIssueCommentDialog"
             android:theme="@style/AppTheme.Dialog"/>
         <activity android:name=".ui.activity.FileActivity"/>
         <activity android:name=".ui.activity.SearchReposActivity">
