--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
     // compile 'com.squareup:otto:1.3.5'
-    compile 'uk.me.lewisdeane.ldialogs:ldialogs@aar'
+    compile 'com.afollestad:material-dialogs:+'
+    compile 'com.rengwuxian.materialedittext:library:1.1.0'
     compile 'com.joanzapata.android:android-iconify:1.0.6'
 }
 
