--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.alorma.github">
 
-    <uses-sdk
-        tools:node="replace"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -16,7 +14,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme.NoBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,8 +30,7 @@
         <activity android:name=".ui.activity.ProfileActivity"/>
         <activity android:name=".ui.activity.RepoDetailActivity"/>
         <activity
-            android:name=".ui.dialog.NewIssueCommentDialog"
-            android:theme="@style/AppTheme.Dialog"/>
+            android:name=".ui.dialog.NewIssueCommentDialog"/>
         <activity android:name=".ui.activity.FileActivity"/>
         <activity android:name=".ui.activity.SearchReposActivity">
             <intent-filter>
