--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,16 @@ dependencies {
     compile project(':sdk')
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
-    compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
+    //compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
     // compile 'com.squareup:otto:1.3.5'
     compile project(':libraries:githubicons')
     compile 'com.afollestad:material-dialogs:+'
     compile 'com.rengwuxian.materialedittext:library:1.1.0'
     compile 'com.joanzapata.android:android-iconify:1.0.6'
+
+    //Core
+    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.0.0'
+
+    //Optional for built-in cards
+    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.0.0'
 }
