--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.0.1'
+    buildToolsVersion '21.1.1'
 
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 21
-        versionName "1.5.0"
-        versionCode 150
+        versionName "1.6.0"
+        versionCode 160
     }
 
     signingConfigs {
@@ -25,7 +25,7 @@ android {
             applicationIdSuffix ".debug"
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             signingConfig signingConfigs.playStore
         }
     }
@@ -33,11 +33,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:21.0.0"
+    compile "com.android.support:appcompat-v7:21.0.2"
     compile 'com.google.android.gms:play-services:6.1.11'
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.android.support:palette-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:support-v13:21.0.2'
+    compile 'com.android.support:palette-v7:21.0.2'
     compile project(':sdk')
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
