--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,17 +34,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:21.0.2"
-    compile 'com.google.android.gms:play-services:6.1.11'
+    compile 'com.google.android.gms:play-services:6.1.71'
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:support-v13:21.0.2'
     compile 'com.android.support:palette-v7:21.0.2'
+    compile 'com.android.support:recyclerview-v7:21.0.2'
     compile project(':sdk')
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     //compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
     // compile 'com.squareup:otto:1.3.5'
     compile project(':libraries:githubicons')
-    compile 'com.afollestad:material-dialogs:+'
+    compile 'com.afollestad:material-dialogs:0.3.6'
     compile 'com.rengwuxian.materialedittext:library:1.4.3'
     compile 'com.joanzapata.android:android-iconify:1.0.6'
 
