--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:21.0.2"
-    compile 'com.google.android.gms:play-services:6.1.71'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:support-v13:21.0.2'
     compile 'com.android.support:palette-v7:21.0.2'
     compile 'com.android.support:recyclerview-v7:21.0.2'
     compile project(':sdk')
+    compile project(':fab')
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     //compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
@@ -47,6 +48,7 @@ dependencies {
     compile project(':libraries:githubicons')
     compile 'com.afollestad:material-dialogs:0.3.6'
     compile 'com.rengwuxian.materialedittext:library:1.4.3'
+    //compile 'com.getbase:floatingactionbutton:1.3.0'
     compile 'com.joanzapata.android:android-iconify:1.0.6'
 
     //Core
