--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
                 android:resource="@xml/searchable_repos" />
         </activity>
         <activity android:name="com.alorma.github.ui.activity.ProfileActivity" />
+        <activity android:name="com.alorma.github.ui.activity.CommitDetailActivity" />
         <activity android:name="com.alorma.github.ui.activity.RepoDetailActivity" />
         <activity android:name="com.alorma.github.ui.dialog.NewIssueCommentDialog" />
         <activity android:name="com.alorma.github.ui.activity.FileActivity" />
