--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sdk"]
 	path = sdk
 	url = https://github.com/alorma/GithubAndroidSdk.git
+[submodule "difftext"]
+	path = libraries/difftext
+	url = https://github.com/alorma/GitDiffTextView.git
