--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':sdk', ':libraries:enhanced-edittext', ':libraries:githubicons', 'libraries:fab_button', ':fab'
+include ':app', ':sdk', ':libraries:enhanced-edittext', ':libraries:githubicons', ':libraries:GitDiffTextView', ':fab'
 project(':fab').projectDir = new File('libraries/fab')
