--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':app', ':sdk', ':libraries:enhanced-edittext', ':libraries:githubicons', ':libraries:GitDiffTextView', ':fab'
-project(':fab').projectDir = new File('libraries/fab')
+include ':app', ':sdk', ':libraries:enhanced-edittext', ':libraries:GitDiffTextView', ':libraries:AndroidGithubIcons', ':libraries:android-floating-action-button'
