Moved ListFragment to Fragment, added commit headers

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.pnikosis:materialish-progress:1.0'
     
     compile 'net.danlew:android.joda:2.6.0'
+    compile 'se.emilsjolander:stickylistheaders:2.5.2'
 }
