--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     
     compile 'net.danlew:android.joda:2.6.0'
     compile 'se.emilsjolander:stickylistheaders:2.5.2'
+    compile('de.psdev.licensesdialog:licensesdialog:1.6.0') {
+        exclude module: 'support-v4'
+    }
 }
