--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:name="com.alorma.github.GitskariosApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.alorma.github.ui.activity.LoginActivity"
@@ -24,21 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.alorma.github.ui.activity.MainActivity">
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable_repos"/>
-        </activity>
+            android:name="com.alorma.github.ui.activity.MainActivity"/>
         <activity android:name="com.alorma.github.ui.activity.ProfileActivity"/>
         <activity android:name="com.alorma.github.ui.activity.CommitDetailActivity"/>
         <activity android:name="com.alorma.github.ui.activity.RepoDetailActivity"/>
         <activity android:name=".ui.dialog.NewIssueCommentActivity"/>
         <activity android:name="com.alorma.github.ui.activity.FileActivity"/>
-        <activity android:name="com.alorma.github.ui.activity.SearchReposActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-            </intent-filter>
-        </activity>
+        <activity android:name="com.alorma.github.ui.activity.AboutActivity"/>
         <activity
             android:name="com.alorma.github.Interceptor"
             android:theme="@android:style/Theme.NoDisplay">
