--- a/app/.gitignore
+++ b/app/.gitignore
@@ -8,6 +8,7 @@ com_crashlytics_export_strings.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
+crashlytics.properties
 
 # Gradle generated files
 .gradle/
