Search repos available

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,10 @@
         <activity
             android:name="com.alorma.github.ui.activity.ReposActivity">
         </activity>
-        <meta-data android:name="com.crashlytics.ApiKey" android:value="e331bb7b7ec0167c4cfcc3b095a54a718802f080"/>
+
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="e331bb7b7ec0167c4cfcc3b095a54a718802f080"/>
     </application>
 
 </manifest>
