Disable inApp purchase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.android.vending.BILLING"/>
+    
+    <!--<uses-permission android:name="com.android.vending.BILLING"/>-->
 
     <application
         android:name="com.alorma.github.GitskariosApplication"
@@ -58,9 +59,9 @@
             </intent-filter>
         </activity>
 
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version"/>-->
 
         <activity
             android:name="com.alorma.github.ui.activity.NewIssueActivity"
