--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     compile 'com.github.d-max:spots-dialog:0.1'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
+    
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 }
