--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     //compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:support-v13:21.0.2'
-    compile 'com.android.support:palette-v7:21.0.2'
-    compile 'com.android.support:recyclerview-v7:21.0.2'
+    compile 'com.android.support:support-v13:21.0.3'
+    compile 'com.android.support:palette-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
     compile project(':sdk')
     // Submodules
     compile project(':libraries:AndroidGithubIcons')
@@ -79,4 +79,8 @@ dependencies {
     compile 'com.squareup:otto:1.3.6'
     compile 'com.squareup.dagger:dagger:1.2.2'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+
+    compile('com.mikepenz.materialdrawer:library:2.5.6@aar') {
+        transitive = true
+    }
 }
