--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,12 +74,12 @@ dependencies {
     compile 'com.github.d-max:spots-dialog:0.1'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.hannesdorfmann.smoothprogressbar:library:1.0.0'
-    
     compile 'com.squareup:otto:1.3.6'
     compile 'com.squareup.dagger:dagger:1.2.2'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
-
-    compile('com.mikepenz.materialdrawer:library:2.5.6@aar') {
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile('com.mikepenz.materialdrawer:library:2.6.5@aar') {
         transitive = true
     }
+    compile 'com.squareup.picasso:picasso:2.3.2'
 }
