--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
             android:name="com.alorma.github.ui.activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name="com.alorma.github.ui.activity.ReposActivity" />
+        <activity android:name="com.alorma.github.ui.activity.OrganizationsActivity" />
 
         <meta-data
             android:name="com.crashlytics.ApiKey"
