Receive data from intent

--- a/gistsapp/src/main/AndroidManifest.xml
+++ b/gistsapp/src/main/AndroidManifest.xml
@@ -26,9 +26,16 @@
         </activity>
 
         <activity android:name=".ui.activity.MainActivity" />
-        <activity android:name=".ui.activity.GistDetailActivity"
-            android:label="@string/create_gist"/>
-        <activity android:name=".ui.activity.CreateGistActivity" />
+        <activity android:name=".ui.activity.GistDetailActivity" />
+        <activity
+            android:name=".ui.activity.CreateGistActivity"
+            android:label="@string/create_gist">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+        </activity>
 
         <service android:name=".account.AccountService">
             <intent-filter>
