Open from browser

--- a/gistsapp/src/main/AndroidManifest.xml
+++ b/gistsapp/src/main/AndroidManifest.xml
@@ -35,12 +35,10 @@
             <intent-filter android:label="@string/open_gist">
                 <action android:name="android.intent.action.VIEW" />
                 <data android:scheme="http" android:host="gist.github.com" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <intent-filter android:label="@string/open_gist">
-                <action android:name="android.intent.action.VIEW" />
                 <data android:scheme="https" android:host="gist.github.com" />
+                <data android:pathPattern=".*" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.GistDetailActivity" />
