--- a/gistsapp/src/main/AndroidManifest.xml
+++ b/gistsapp/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -43,7 +44,7 @@
         </activity>
         <activity android:name=".ui.activity.GistDetailActivity" />
         <activity
-            android:name=".ui.activity.CreateGistActivity"
+            android:name="com.alorma.gistsapp.ui.activity.CreateGistActivity"
             android:label="@string/create_gist">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -65,5 +66,4 @@
             android:value="e331bb7b7ec0167c4cfcc3b095a54a718802f080" />
     </application>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
